--- a/class_room/templates/class_room/make_group.html
+++ b/class_room/templates/class_room/make_group.html
@@ -25,29 +25,32 @@
                 max-height: 100%;
             }
 
-            h3 {
-                color: white;
+            [type="radio"].with-gap:checked + label:before {
+                border-radius: 50%;
+                border: 2px solid #673fb4;
             }
 
-            #valign-wrapper {
-                position: absolute;
-                margin: 0;
-                padding: 0;
-
-                min-width: 100%;
-                width: 100%;
-                max-width: 100%;
-
-                min-height: 100%;
-                height: 100%;
-                max-height: 100%;
-
-                top: -32px;
+            [type="radio"].with-gap:checked + label:after {
+                border-radius: 50%;
+                border: 2px solid #673fb4;
+                background-color: #673fb4;
+                z-index: 0;
+                -webkit-transform: scale(.5);
+                -moz-transform: scale(.5);
+                -ms-transform: scale(.5);
+                -o-transform: scale(.5);
+                transform: scale(.5);
+            }
+            .input-field input[type=text]:focus {
+                border-bottom: 1px solid #673fb4;
+                box-shadow: 0 1px 0 0 #000;
+            }
+            input:focus, input {
+                color: white;
             }
         </style>
     </head>
     <body>
-
         <nav>
             <div class="nav-wrapper" style="background-color: black;">
                 <a href="/" class="brand-logo" style="color: white;">로고</a>
@@ -59,18 +62,31 @@
         <div class="valign-wrapper" id="valign-wrapper">
             <div class="valign container center">
 
-                <h3>안녕하세요. {{ user.name }}님</h3>
-                <h3>새로운 그룹을 만들거나 찾아보세요!</h3>
+                <div id="how-many" style="color: white;">
+                    <h2>{{ groupCnt }}개의 그룹이</h2>
+                    <h4>함께 하고 있습니다!</h4>
+                </div>
+                <br><br>
 
-                <a href="{% url 'class_room:make_group' %}" class="waves-effect waves-light deep-purple btn" style="width: 200px;">만들기</a>
-                &nbsp;&nbsp;&nbsp;
-                <a class="waves-effect waves-light white btn" style="color: black; width: 200px;">검색하기</a>
+                <form class="input-field" method="post">
+                    {% csrf_token %}
+                    
+                    <input type="text" name="name" placeholder="그룹명을 입력하세요." style="width: 300px;"><br>
+                    <input type="text" name="code" placeholder="5자리의 숫자코드를 입력하세요." style="width: 300px"><br><br>
+                    <!-- <p class="center" style="margin-top: -10px;">
+                        <input class="with-gap" name="job" type="radio" id="public" />
+                        <label for="public">공개</label>
+                        <input class="with-gap" name="job" type="radio" id="public2" />
+                        <label for="public">비공개</label>
+                    </p> -->
+                    <button style="width: 280px;" class="btn waves-effect waves-light deep-purple" type="submit" name="action">확인</button>
+
+                </form>
 
             </div>
         </div>
 
         {% endif %}
-
 
         <script type="text/javascript">
             $(document).ready(() => {
