--- a/class_room/templates/class_room/index.html
+++ b/class_room/templates/class_room/index.html
@@ -64,7 +64,7 @@
 
                 <a href="{% url 'class_room:make_group' %}" class="waves-effect waves-light deep-purple btn" style="width: 200px;">만들기</a>
                 &nbsp;&nbsp;&nbsp;
-                <a class="waves-effect waves-light white btn" style="color: black; width: 200px;">검색하기</a>
+                <a href="{% url 'class_room:join_group' %}" class="waves-effect waves-light white btn" style="color: black; width: 200px;">검색하기</a>
 
             </div>
         </div>
