--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -32,7 +32,7 @@
 
             [type="radio"].with-gap:checked + label:before {
                 border-radius: 50%;
-                border: 2px solid #d1d1d1;
+                border: 2px solid #673fb4;
             }
 
             [type="radio"].with-gap + label:before {
@@ -42,8 +42,8 @@
 
             [type="radio"].with-gap:checked + label:after {
                 border-radius: 50%;
-                border: 2px solid #d1d1d1;
-                background-color: #d1d1d1;
+                border: 2px solid #673fb4;
+                background-color: #673fb4;
                 z-index: 0;
                 -webkit-transform: scale(.5);
                 -moz-transform: scale(.5);
