--- a/class_room/templates/class_room/index.html
+++ b/class_room/templates/class_room/index.html
@@ -25,12 +25,11 @@
                 max-height: 100%;
             }
 
-            h3 {
+            h5 {
                 color: white;
             }
 
             #valign-wrapper {
-                position: absolute;
                 margin: 0;
                 padding: 0;
 
@@ -41,37 +40,24 @@
                 min-height: 100%;
                 height: 100%;
                 max-height: 100%;
-
-                top: -32px;
             }
         </style>
     </head>
     <body>
-
-        {% ifequal error.error True %}
-
-            <script type="text/javascript">
-                alert('선생님만 그룹을 생성할 수 있습니다.');
-            </script>
-
-        {% endifequal %}
-        <nav>
-            <div class="nav-wrapper" style="background-color: black;">
-                <a href="/" class="brand-logo" style="color: white;">로고</a>
-            </div>
-        </nav>
 
         {% if request.user.is_authenticated %}
 
         <div class="valign-wrapper" id="valign-wrapper">
             <div class="valign container center">
 
-                <h3>안녕하세요. {{ user.name }}님</h3>
-                <h3>새로운 그룹을 만들거나 찾아보세요!</h3>
+                <h5>안녕하세요. {{ user.name }}님</h5>
+                <h5>새로운 그룹을 만들거나 찾아보세요!</h5>
 
-                <a href="{% url 'class_room:make_group' %}" class="waves-effect waves-light deep-purple btn" style="width: 200px;">만들기</a>
-                &nbsp;&nbsp;&nbsp;
-                <a href="{% url 'class_room:join_group' %}" class="waves-effect waves-light white btn" style="color: black; width: 200px;">검색하기</a>
+                {% if user.job == "teacher" %}
+                    <a href="{% url 'class_room:make_group' %}" class="waves-effect waves-light deep-purple btn" style="width: 150px;">만들기</a>
+                    &nbsp;&nbsp;&nbsp;
+                {% endif %}
+                <a href="{% url 'class_room:search_group' %}" class="waves-effect waves-light white btn" style="color: black; width: 150px;">검색하기</a>
 
             </div>
         </div>
