포스트 기능 추

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -84,7 +84,7 @@
                 {% endif %}
                 <input style="width: 280px;" type="text" name="name" placeholder="이름을 입력해주세요." autocomplete="off">
                 <input style="width: 280px;" type="email" name="username" placeholder="이메일을 입력해주세요." autocomplete="off">
-                <input style="width: 280px;" type="password" name="password1" placeholder="비밀번호를 입력해주세요." autocomplete="off">
+                <input style="width: 280px;" type="password" name="password1" placeholder="비밀번호를 입력해주세요.(8자 이상)" autocomplete="off">
                 <input style="width: 280px;" type="password" name="password2" placeholder="비밀번호를 다시 입력해주세요." autocomplete="off">
 
                 <p class="center" style="margin-top: -10px;">
