--- a/class_room/templates/class_room/setting_group.html
+++ b/class_room/templates/class_room/setting_group.html
@@ -36,47 +36,29 @@
 
         <br><br><br><br><br>
 
-        <div class="container" style="width: 800px; height: auto; background-color: white;"><br>
-            <div class="" style="margin-left: 40px;" id="content">
-                <form class="input-field" id="post-form" method="post">
-                    {% csrf_token %}
-                    <input type="text" style="color: #5b5a5b; width: 300px; font-size: 30px;" name="title" placeholder="제목을 입력하세요."><br>
-                    <span style="color: #e0e0e0; font-size: 20px;">{{ user.name }}</span>
-                    <br><br>
-                    <textarea name="text" style="color: grey; font-size: 15px; width: 700px; height: 300px;" form="post-form" rows="8" cols="40"></textarea>
-                    <br><br>
-                    <button class="btn waves-effect waves-light deep-purple" style="margin-left: 300px;" type="submit" name="action">게시</button>
-                </form>
-            </div>
-            <br>
+        <div class="container center" style="width: 800px; height: auto; background-color: white;"><br>
+            <span style="font-size: 25px;">그룹 요청</span><br><br>
+
+            {% for i in user %}
+                <div class="">
+                    <span class="left" style="margin-left: 60px; font-size: 20px;">{{ i.name }}</span>
+                    <div class="right" style="margin-right: 30px;">
+                        <a class="waves-effect waves-light deep-purple btn" href="?pk={{ i.pk }}&accept=1">수락</a>
+                        <a class="waves-effect waves-light white btn" style="color: black;" href="?pk={{ i.pk }}&accept=0">거절</a>
+                    </div><br>
+                </div><br><br>
+            {% endfor %}
         </div>
         <br><br>
 
         <ul id="slide-out" class="side-nav">
-            <!-- <li><a class="waves-effect modal-trigger" href="#modal1">글쓰기</a></li> -->
             <li><a class="waves-effect" href="/new_post/">글쓰기</a></li>
             <li><a class="waves-effect" href="#!">게시판</a></li>
             <li><a class="waves-effect" href="/setting">설정</a></li>
             <li><a class="waves-effect" href="/accounts/logout/">로그아웃</a></li>
         </ul>
 
-        <!-- Modal Structure -->
-        <div id="modal1" class="modal">
-            <div class="modal-content">
-                <h4>Modal Header</h4>
-                <p>A bunch of text</p>
-            </div>
-            <div class="modal-footer">
-                <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-            </div>
-        </div>
-
         <script type="text/javascript">
-            $(document).ready(function(){
-                // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
-                $('.modal-trigger').leanModal();
-            });
-
             $('#button-collapse').sideNav({
                 menuWidth: 200, // Default is 240
                 edge: 'right' // Choose the horizontal origin
