--- a/class_room/templates/class_room/mygroup.html
+++ b/class_room/templates/class_room/mygroup.html
@@ -27,6 +27,7 @@
 
         <nav style="position: fixed;">
             <div class="nav-wrapper" style="background-color: white;">
+                <img src="{% static 'images/logo.png' %}" alt="" style="width: 50px; height: 50px; margin-left: 5px; margin-top: 5px;"/>
                 <a href="/" class="brand-logo center" style="color: grey;">{{ group.name }}</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="#" data-activates="slide-out" id="button-collapse"><i style="color: black;" class="material-icons">menu</i></a></li>
@@ -72,7 +73,7 @@
         <ul id="slide-out" class="side-nav">
             <!-- <li><a class="waves-effect modal-trigger" href="#modal1">글쓰기</a></li> -->
             <li><a class="waves-effect" href="/new_post/">글쓰기</a></li>
-            <li><a class="waves-effect" href="#!">게시판</a></li>
+            <!-- <li><a class="waves-effect" href="#!">게시판</a></li> -->
             <li><a class="waves-effect" href="/setting">설정</a></li>
             <li><a class="waves-effect" href="/accounts/logout/">로그아웃</a></li>
         </ul>
