--- a/class_room/templates/class_room/mygroup.html
+++ b/class_room/templates/class_room/mygroup.html
@@ -25,7 +25,7 @@
     </head>
     <body>
 
-        <nav style="position: fixed;">
+        <nav style="position: fixed; z-index: 10;">
             <div class="nav-wrapper" style="background-color: white;">
                 <img src="{% static 'images/logo.png' %}" alt="" style="width: 50px; height: 50px; margin-left: 5px; margin-top: 5px;"/>
                 <a href="/" class="brand-logo center" style="color: grey;">{{ group.name }}</a>
