--- a/class_room/templates/class_room/setting_group.html
+++ b/class_room/templates/class_room/setting_group.html
@@ -1,73 +1,63 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>청어</title>
+{% extends 'class_room/base.html' %}
 
-        <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
-    	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+{% block content %}
+<br><br><br><br>
+<div class="container" style="width: 800px; height: auto; background-color: white;">
 
-        <style media="screen">
-            body {
-                background-color: #f8f7f8;
-            }
+    <div class="container" id="image-field">
+        <img class="responsive-img circle" src="{{ me.profileImage.url }}" style="width: 200px; height: 200px; position: absolute; left: 50%; margin-left: -100px; top: 100px;">
+    </div>
 
-            .input-field input[type=text]:focus {
-                border-bottom: 1px solid #673fb4;
-                box-shadow: 0 1px 0 0 #000;
-            }
-        </style>
+    <div class="container center" id="text-field" style="width: 100%;">
 
-    </head>
-    <body>
+        <span style="font-size: 50px; display: inline-block; margin-top: 100px;" class="" id="name">
+            {{ me.name }}
+        </span>
 
-        <nav style="position: fixed;">
-            <div class="nav-wrapper" style="background-color: white;">
-                <img src="{% static 'images/logo.png' %}" alt="" style="width: 50px; height: 50px; margin-left: 5px; margin-top: 5px;"/>
-                <a href="/" class="brand-logo center" style="color: grey;">{{ group.name }}</a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="#" data-activates="slide-out" id="button-collapse"><i style="color: black;" class="material-icons">menu</i></a></li>
-                </ul>
+    </div>
+
+    <div class="container center" id="form-field" style="width: 100%;">
+
+        <form class="input-field center" id="post-form" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+
+            <div class="" id="set-profile" style="margin-left: 120px;">
+                <span>프로필 사진 변경 : </span>
+                <input type="file" name="profileImage" value="">
             </div>
-        </nav>
 
-        <br><br><br><br><br>
+            <br>
 
-        <div class="container center" style="width: 800px; height: auto; background-color: white;"><br>
-            <span style="font-size: 25px;">그룹 요청</span><br><br>
+            {% if me.introduce == '' %}
+                <textarea name="introduce" value="" placeholder="자기소개를 입력해주세요." style="color: grey; font-size: 15px; width: 500px; height: 100px; border-radius: 5px;" form="post-form" rows="8" cols="40"></textarea>
+            {% else %}
+                <textarea name="introduce" style="color: grey; font-size: 15px; width: 500px; height: 100px; border-radius: 5px;" form="post-form" rows="8" cols="40">{{ me.introduce }}</textarea>
+            {% endif %}
+            <br><br>
+            <button class="btn waves-effect waves-light deep-purple" type="submit" name="action">변경</button>
+            <br><br>
+        </form>
 
-            {% for i in user %}
-                <div class="">
-                    <span class="left" style="margin-left: 60px; font-size: 20px;">{{ i.name }}</span>
-                    <div class="right" style="margin-right: 30px;">
-                        <a class="waves-effect waves-light deep-purple btn" href="?pk={{ i.pk }}&accept=1">수락</a>
-                        <a class="waves-effect waves-light white btn" style="color: black;" href="?pk={{ i.pk }}&accept=0">거절</a>
-                    </div><br>
-                </div><br><br>
-            {% endfor %}
-        </div>
-        <br><br>
-        <div class="container center valign-wrapper" style="width: 800px; height: 100px; background-color: white;"><br>
-            <a class="valign waves-effect waves-light deep-purple btn" style="margin-left: 350px;" href="/exit_group">그룹 탈퇴</a>
-        </div>
-        <br><br>
+    </div>
+</div>
+<br><br>
+<div class="container center" style="width: 800px; height: auto; background-color: white;"><br>
+    <span style="font-size: 25px;">그룹 요청</span><br><br>
 
-        <ul id="slide-out" class="side-nav">
-            <li><a class="waves-effect" href="/new_post/">글쓰기</a></li>
-            <!-- <li><a class="waves-effect" href="#!">게시판</a></li> -->
-            <li><a class="waves-effect" href="/setting">설정</a></li>
-            <li><a class="waves-effect" href="/accounts/logout/">로그아웃</a></li>
-        </ul>
+    {% for i in user %}
+        <div class="">
+            <span class="left" style="margin-left: 60px; font-size: 20px;">{{ i.name }}</span>
+            <div class="right" style="margin-right: 30px;">
+                <a class="waves-effect waves-light deep-purple btn" href="?pk={{ i.pk }}&accept=1">수락</a>
+                <a class="waves-effect waves-light white btn" style="color: black;" href="?pk={{ i.pk }}&accept=0">거절</a>
+            </div><br>
+        </div><br><br>
+    {% endfor %}
+</div>
+<br><br>
+<div class="container center valign-wrapper" style="width: 800px; height: 100px; background-color: white;"><br>
+    <a class="valign waves-effect waves-light deep-purple btn" style="margin-left: 350px;" href="/exit_group">그룹 탈퇴</a>
+</div>
+<br><br>
 
-        <script type="text/javascript">
-            $('#button-collapse').sideNav({
-                menuWidth: 200, // Default is 240
-                edge: 'right' // Choose the horizontal origin
-            });
-        </script>
-    </body>
-</html>
+{% endblock %}
