첫화면에 로그아웃 버튼 추가

--- a/class_room/templates/class_room/base.html
+++ b/class_room/templates/class_room/base.html
@@ -74,6 +74,14 @@
                 <a class="waves-effect" href="/new_post/">글쓰기</a>
             </li>
             <li>
+                <img style="position: absolute; margin-top: 15px; margin-left: 7px; width: 19px; height: 19px;" src="{% static 'images/notice.png' %}" />
+                <a class="waves-effect" href="/notice">공지사항</a>
+            </li>
+            <li>
+                <img style="position: absolute; margin-top: 15px; margin-left: 7px; width: 19px; height: 19px;" src="{% static 'images/board.png' %}" />
+                <a class="waves-effect" href="/board">게시판</a>
+            </li>
+            <li>
                 <img style="position: absolute; margin-top: 15px; margin-left: 7px; width: 19px; height: 19px;" src="{% static 'images/chat.png' %}" />
                 <a class="waves-effect" href="http://127.0.0.1:3000/{{ user.name }}">채팅</a>
             </li>
