--- a/class_room/templates/class_room/index.html
+++ b/class_room/templates/class_room/index.html
@@ -41,11 +41,17 @@
                 height: 100%;
                 max-height: 100%;
             }
+
+            #logout:hover {
+                cursor: pointer;
+            }
         </style>
     </head>
     <body>
 
         {% if request.user.is_authenticated %}
+
+        <img src="{% static 'images/logout2.png' %}" class="right" id="logout" style="position: absolute; right: 20px; top: 20px;" onclick="location.href='/accounts/logout';"/>
 
         <div class="valign-wrapper" id="valign-wrapper">
             <div class="valign container center">
