--- a/django/class_room/templates/class_room/new_post.html
+++ b/django/class_room/templates/class_room/new_post.html
@@ -29,4 +29,10 @@
 </div>
 <br><br>
 
+<script type="text/javascript">
+    $('#search').submit((e) => {
+        e.preventDefault();
+    })
+</script>
+
 {% endblock %}
