--- a/django/class_room/templates/class_room/request_finish.html
+++ b/django/class_room/templates/class_room/request_finish.html
@@ -2,6 +2,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta http-equiv="Expires" content="Mon, 06 Jan 1990 00:00:01 GMT">
+        <meta http-equiv="Expires" content="-1">
+        <meta http-equiv="Pragma" content="no-cache">
+        <meta http-equiv="Cache-Control" content="no-cache">
         <meta charset="utf-8">
         <title>청어</title>
 
