--- a/django/class_room/templates/class_room/search_group.html
+++ b/django/class_room/templates/class_room/search_group.html
@@ -2,6 +2,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta http-equiv="Expires" content="Mon, 06 Jan 1990 00:00:01 GMT">
+        <meta http-equiv="Expires" content="-1">
+        <meta http-equiv="Pragma" content="no-cache">
+        <meta http-equiv="Cache-Control" content="no-cache">
         <meta charset="utf-8">
         <title>청어</title>
 
@@ -75,7 +79,7 @@
                 <form class="input-field" method="get">
                     {% csrf_token %}
 
-                    <input type="text" name="code" style="width: 250px;" placeholder="그룹 코드(5자리)를 입력해주세요.">
+                    <input type="text" name="code" style="width: 250px;" placeholder="그룹 코드를 입력해주세요.">
                     <button style="width: 100px;" class="btn waves-effect waves-light deep-purple" type="submit" name="action">검색</button>
 
                 </form>
