--- a/django/class_room/templates/class_room/setting_group.html
+++ b/django/class_room/templates/class_room/setting_group.html
@@ -77,4 +77,10 @@
 </div>
 <br><br>
 
+<script type="text/javascript">
+    $('#search').submit((e) => {
+        e.preventDefault();
+    })
+</script>
+
 {% endblock %}
